--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: '3.8'
 
 services:
-  api:
+  web:
     build: .
     ports:
       - "5000:5000"
     depends_on:
       - postgresDB
     environment:
-      - JWT_KEY=YOUR_JWT_KEY
-      - POSTGRE_URI_PRD=postgresql+psycopg2://postgres:postgres@postgresDB:5432/postgres
+      - JWT_KEY=${JWT_KEY}
+      - POSTGRE_URI_PRD={POSTGRE_URI_PRD}
   
   postgresDB:
     image: postgres:14
@@ -17,9 +17,9 @@ services:
     ports:
       - "5433:5432"
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - pgdata:/var/lib/postgresql/data
