Fix: Resolving bug with docker-compose variable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - postgresDB
     environment:
       - JWT_KEY=${JWT_KEY}
-      - POSTGRE_URI_PRD={POSTGRE_URI_PRD}
+      - POSTGRE_URI_PRD=${POSTGRE_URI_PRD}
   
   postgresDB:
     image: postgres:14
